_rendered/apps/cilium/namespace-cilium-secrets.yaml
---
# Source: test/charts/cilium/templates/cilium-secrets-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cilium-secrets"
  labels:
    app.kubernetes.io/part-of: cilium
    helm.sh/chart: cilium-1.20.2
  annotations:
