_rendered/apps/cilium/networking_k8s_io-ingress-kube-system-hubble-ui.yaml
# Source: test/charts/cilium/templates/hubble-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    k8s-app: hubble-ui
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
    helm.sh/chart: cilium-1.20.2
  annotations:
    cert-manager.io/cluster-issuer: step-ca-internal
    traefik.ingress.kubernetes.io/router.middlewares: traefik-common-internal-access-allowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - hubble.svc.elda
      secretName: hubble-ui-internal-cert
  rules:
    - host: hubble.svc.elda
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  name: http
